--- a/ip_country_block.html
+++ b/ip_country_block.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOLOLLOOLOLLLL</title>
+    <title>You HAVE BEEN BANNED! - pmh.codes</title>
   </head>
-  <body style="background-image: url('./resources/EaxW0M8U8AA0wtB.jpg');">
-    <div style="background-color: #ffffffaa; padding: 15px; height: 100vh;">
-      <p>You HAVE BEEN BANNED!</p>
-      <p>I have your ip address: <span style="color: red">::CLIENT_IP::</span></p>
-      <p>If you think this is wrong. contact <a href="mailto:pmh_only@pmh.codes">pmh_only@pmh.codes</a></p>
+  <body>
+    <div id="a">
+      <div id="b">
+        <p id="c">You HAVE BEEN BANNED from our network.</p>
+        <p>IP: <a href="https://www.infobyip.com/ip-::CLIENT_IP::.html" id="d">::CLIENT_IP::</a></p>
+        <p>If you think this is wrong. contact <a href="mailto:pmh_only@pmh.codes">pmh_only@pmh.codes</a></p>
+      </div>
     </div>
   </body>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #fafafa;
+    }
+
+    #a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+
+    #b {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      padding: 20px;
+      border-radius: 5px;
+      text-align: center;
+    }
+
+    #c {
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    #d {
+      color: red;
+    }
+  </style>
 </html>
